# MlOps

./: .gitignore  Dockerfile  README.md  commands.py  data.dvc  project_structure.txt  pyproject.toml
.dvc/: config
config/: config.yaml
dog_mlops/: dataclass.py  export_model.py  infer.py  model.py  train.py  utils.py
