[tool.poetry]
name = "dog_mlops"
version = "0.1.0"
description = ""
authors = ["Korotkova EA"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
torch = { version = "2.0.1+cu117", source="torch"}
torchvision = { version="^0.15.2+cu117", source="torch"}

gdown = ">=4.7.1"
numpy = ">=1.23.4"
pillow = ">=10.0.1"
pyyaml = ">=6.0.1"
scikit-learn = ">=1.3.1"
tqdm = ">=4.64.1"
tensorboard = "^2.14.1"
pandas = "^2.1.1"
fire = "^0.5.0"
dvc = {extras = ["gdrive"], version = "^3.30.3"}
pytorch-lightning = "^2.1.0"
mlflow = "^2.8.1"
transformers = "^4.36.2"
pre-commit = "^3.6.0"
onnx = "1.15.0"
onnxruntime = "1.16.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
src_paths = ["dog_mlops"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
